<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/store"
        android:icon="@drawable/bottom_bar_shop"
        android:title="@string/actionbar_store"
        app:showAsAction="always"/>
    <item
        android:id="@+id/recommendations"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/rekommendera_produkt"
        app:showAsAction="always"/>
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_action_account_icon"
        android:title="@string/actionbar_account"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/cart_bottom"
        android:icon="@drawable/bottom_bar_checkout"
        android:title="@string/cart_button"
        app:showAsAction="ifRoom"
        />
</menu>