<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:layout_width="64dp"
        android:id="@+id/positive_response_button"
        android:layout_height="wrap_content"
        android:text="@string/dialog_checkout_positive_button"
        android:background="@color/colorAccent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />
    <Button
        android:layout_width="64dp"
        android:id="@+id/negative_response_button"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/positive_response_button"
        android:text="@string/dialog_checkout_negative_button"
        android:background="?android:background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/text_message_checkout"
        android:layout_height="wrap_content"
        android:text="@string/dialog_checkout_text_message"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>



</RelativeLayout>