<?xml version="1.0" encoding="utf-8"?>
<!--
@author: Morgan Thowsen, Johan Almroth.
Description: Cardview for a product.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/decrementButton"
                android:layout_width="38dp"
                android:layout_height="29dp"
                android:layout_below="@+id/incrementButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/decrement"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <TextView
                android:id="@+id/cart_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:text="@string/placeholder_product_name" />

            <TextView
                android:id="@+id/cart_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="62dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="63dp"
                android:layout_toEndOf="@+id/cart_product_name"
                android:text="@string/placeholder_product_price" />

            <ImageButton
                android:id="@+id/incrementButton"
                android:layout_width="38dp"
                android:layout_height="29dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="370dp"
                android:contentDescription="@string/increment"
                app:srcCompat="@android:drawable/arrow_up_float" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>