<?xml version="1.0" encoding="utf-8"?>
<!--
@author: Morgan Thowsen.
Description: Cardveiw layout for store.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="1dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:id="@+id/addtoCart_button"
                android:background="@color/white"
                android:contentDescription="@string/add_to_cart_button_content_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_add_shopping_cart_24dp"/>

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder_product_name" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAlignment="textEnd"
                android:layout_toEndOf="@id/product_name"
                android:layout_marginEnd="64dp"
                android:layout_toStartOf="@id/addtoCart_button"
                android:text="@string/placeholder_product_price" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>